
  o CHANGE:  Refinement drag elasticity increased
             [Everyone who tried to use it in 0.8.1 :-(]

  o BUG-FIX: Improvement in PDB->SHELXL ins output [Andrea Thorn]

  o BUG-FIX: Fix problem of deleting all atoms in Baton Build atoms
             molecule

  o BUG-FIX: The NCS master chain in Copy NCS Residue Range now works
             [Airlie McCoy]

  o BUG-FIX: Fix output format of external restraints [Richard Bunker]

  o BUG-FIX: Torsion-based ligand fitting improvements [Rob Nicholls]

  o BUG-FIX: A model with hydrogens displayed in CA+Ligands mode used
             to show the hydrogens even if hydrogens were off - Fixed now.
             [Alex Wlodawer]

  o BUG-FIX: Fix occassional graph data range anomaly [Rob Nicholls]

  o BUG-FIX: Add missing plane distortions in print_residue_distortions()

  o BUG-FIX: PISA interface works with newer version of pisa 
             [Maria Jose Sanchez Barrena]

  o BUG-FIX: Only check once for probe when showing the Validation menu.
  
  o BUG-FIX: Resetting of Own font colour on opening the preferences
             dialog fixed.


-----

  Release 0.8.1

  o CHANGE: Generic Dislay Objects dialog improved.

  o CHANGE: Water validation dialogs are now transient

  o CHANGE: Ctrl-R for Rock View

  o CHANGE: Least Squares Fit dialog now remembers its values

  o BUG-FIX: stippling for line and text geometry and environment
    distances updated

  o BUG-FIX: Jiggle fit moves atoms with zero occupancies.

  o BUG-FIX: Problem with CA-Zone -> Mainchain fixed.

  o BUG-FIX: The amount that the other atoms ove with moving the
    picked atom has been reduced (but is configurable)

  o BUG-FIX: Sort chains and residues has been fixed.

  o BUG-FIX: Add Template Keybindings for Python now works

-----

  Release 0.8

  o FEATURE: Added a interface for Cootilus

  o FEATURE: Pubchem support for drag and drop

  o FEATURE: Added glyo and ProSMART modules
